--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <!-- About Section -->
 <section id="about">
   <h1>About</h1>
-  <p>Hi, I'm Somya, a student passionate about Computer Science. I completed my schooling at St. Thomas School (1st–10th) and Priyadarshini Higher Secondary School (11th–12th). In college, I created projects like a Snake Water Gun game using Python , a Weather App using APIs,etc. My future goal is to build impactful solutions with technology.</p>
+  <p>Hi, I'm Somya, a student passionate about Computer Science. I completed my schooling at St. Thomas School (1st–10th) and Priyadarshini Higher Secondary School (11th–12th). Currently, I am pursuing a BS in Data Science from IIT Madras and an undergraduate course in Computer Science & Artificial Intelligence from Scaler School of Technology. In college, I created projects like a Snake Water Gun game using Python, a Weather App using APIs, and more. My future goal is to build impactful solutions with technology.</p>
   <div>
     <h2>Coding Skills</h2>
     <ul>
@@ -83,6 +83,12 @@
       <p>I have created a variety of engaging and interactive web projects that showcase my skills in front-end development and animation </p>
       <br> 
       <a href="https://github.com/Somya1503/WebDev-Activities" target="_blank">GitHub</a>
+    </div>
+    <div class="project-card">
+      <h2>Gesture Control</h2>
+      <p>I worked on a project where hand gestures control cars in games like Hill Climbing Racing. Using computer vision, the system detects hand movements via a camera and converts them into game controls.</p>
+      <br> 
+      <a href="https://github.com/Somya1503/Projects/blob/main/GestureControl/gesture.py" target="_blank">GitHub</a>
     </div>
   </div>
 </section>
