--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <h2>Web Devlopment Activities</h2>
       <p>I have created a variety of engaging and interactive web projects that showcase my skills in front-end development and animation </p>
       <br> 
-      <a href="https://github.com/Somya1503/WebDev-Activities" target="_blank">GitHub</a>
+      <a href="https://github.com/Somya1503/WebDev-Activities" target="_blank">GitHub</a> | <a href="https://somya1503.github.io/WebDev-Activities/" target="_blank">Webpage</a>
     </div>
     <div class="project-card">
       <h2>Gesture Control</h2>
