--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <h2>Portfolio Website</h2>
       <p>A responsive personal website built with HTML and CSS.</p>
       <br>
-      <a href="https://github.com/Somya1503/Portfolio-Website">GitHub</a> | <a href="https://somya1503.github.io/Portfolio-Website/">WebPage</a> 
+      <a href="https://github.com/Somya1503/Portfolio-Website" target="_blank">GitHub</a> | <a href="https://somya1503.github.io/Portfolio-Website/" target="_blank">WebPage</a> 
     </div>
     <div class="project-card">
       <h2>Number Game</h2>
