Add expense tracker project

--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
 <!-- About Section -->
 <section id="about">
   <h1>About</h1>
-  <p>Hi, I'm Somya, a student passionate about Computer Science. I completed my schooling at St. Thomas School (1st–10th) and Priyadarshini Higher Secondary School (11th–12th). Currently, I am pursuing a BS in Data Science from IIT Madras and an undergraduate course in Computer Science & Artificial Intelligence from Scaler School of Technology. In college, I created projects like a Snake Water Gun game using Python, a Weather App using APIs, and more. My future goal is to build impactful solutions with technology.</p>
+  <p>I am Somya, a first-year student pursuing a BS in Data Science from IIT Madras and a B.Tech in Computer Science & Artificial Intelligence at Scaler School of Technology.
+
+I have a strong interest in Data Structures & Algorithms and Web Development, and I enjoy building practical projects to strengthen my skills.
+
+Currently, I am focused on improving my problem-solving abilities and frontend development skills</p>
   <div>
     <h2>Coding Skills</h2>
     <ul>
@@ -55,12 +59,6 @@
   <h1>Projects</h1>
   <div class="project-grid">
     <div class="project-card">
-      <h2>Snake Water Gun</h2>
-      <p>A simple Python-based game where players compete against the computer.</p>
-      <br>
-      <a href="https://github.com/Somya1503/Projects/blob/main/Game_1.py" target="_blank">GitHub</a>
-    </div>
-    <div class="project-card">
       <h2>Weather App</h2>
       <p>Fetches real-time weather data using an API and displays it in a clean UI.</p>
       <br>
@@ -72,11 +70,12 @@
       <br>
       <a href="https://github.com/Somya1503/Portfolio-Website" target="_blank">GitHub</a> | <a href="https://somya1503.github.io/Portfolio-Website/" target="_blank">WebPage</a> 
     </div>
-    <div class="project-card">
-      <h2>Number Game</h2>
-      <p>A simple Python-based game where players have to guess the random number </p>
+
+     <div class="project-card">
+      <h2>Projects</h2>
+      <p>A collection of projects developed while learning Python and exploring different areas of technology.</p>
       <br> 
-      <a href="https://github.com/Somya1503/Projects/blob/main/Game_2.py" target="_blank">GitHub</a>
+      <a href="https://github.com/Somya1503/Projects/tree/main" target="_blank">GitHub</a>
     </div>
      <div class="project-card">
       <h2>Web Devlopment Activities</h2>
@@ -85,10 +84,14 @@
       <a href="https://github.com/Somya1503/WebDev-Activities" target="_blank">GitHub</a> | <a href="https://somya1503.github.io/WebDev-Activities/" target="_blank">Webpage</a>
     </div>
     <div class="project-card">
-      <h2>Gesture Control</h2>
-      <p>I worked on a project where hand gestures control cars in games like Hill Climbing Racing. Using computer vision, the system detects hand movements via a camera and converts them into game controls.</p>
+      <h2>Expense Tracker</h2>
+      <p>Built a responsive expense tracker web application using HTML, CSS, and JavaScript. 
+The application allows users to add, delete, and monitor their daily expenses with 
+dynamic updates to the total balance. This project helped me strengthen my 
+understanding of DOM manipulation and frontend logic.
+</p>
       <br> 
-      <a href="https://github.com/Somya1503/Projects/blob/main/GestureControl/gesture.py" target="_blank">GitHub</a>
+     <a href="https://github.com/Somya1503/expense-tracker" target="_blank">GitHub</a> | <a href="https://somya1503.github.io/expense-tracker/" target="_blank">WebPage</a> 
     </div>
   </div>
 </section>
